--- a/index.html
+++ b/index.html
@@ -1,146 +1,67 @@
-<!--  Progression 1 - Change the sample text to your information.
-  1.a -> Change your Name. Line number 33
-  1.b -> Change your information. Starting from line number 35 
-  1.c -> Change the achievements to your achievements. Starts from line number 98
-  1.d -> Change the hobbies to your hobbies(It would be better if you keep images). Starts from line number 112.
-  1.e -> Change the contact information. Line number 132  -->
-
-<!-- Progression 2 - Update the link of your projects. Starts from line number 58.
-      You have done your projects, time to give the link of all the projects.
-      Do you find the anchor tags that says "SEE PROJECT"? Is the href attribute empty?
-      Give the Github page link of all your projects in the empty href's-->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+    <title>Game Pad</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <ul id="nav">
-    <li><a href="#home">HOME</a></li>
-    <li><a href="#work">WORK</a></li>
-    <li><a href="#achievements">ACHIEVEMENTS</a></li>
-    <li><a href="#hobbies">HOBBIES</a></li>
-    <li><a href="#contact">CONTACT</a></li>
-  </ul>
-  <section id="home" class="flex-centered">
-    <div id="home-text">
-      <h1>Veer Banerjee</h1>
-      <p>
-        I am a ProGrad Junior (Web Developer). Born and brought up in Bangalore, India
-        I am now studying 10th Grade at AECS MMPS School. Just
-        so you know, I am the crazy acquarian everyone warned you about. On
-        one side, I love exploring different things. On the other side, I do
-        have a serious goal of becoming an entreprenuer.
-        <br />
-        <br />
-
-        Fun and super cool with a contagious disease called AWESOME - That’s
-        who I am.
-      </p>
-      <div class="button heading">LET'S TALK!</div>
+    <div class="container">
+        <div class="nav">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#specs">Specs</a></li>
+                <li><a href="#shop-now">Buy Now</a></li>
+            </ul>
+        </div>
+        <div id="home">
+            <div class="image-text">
+                <h2>Game Pad</h2>
+                <p>
+                    <br>
+                    Are you a mobile gamer? Does your hand get sweaty and slip of the screen?
+                    Do you always need to charge your phone? Then, this is the product for you.
+                </p>
+            </div>
+            <img class="game-pad" src="https://res.cloudinary.com/dbrsienbw/image/upload/v1596039283/GamePad_ywjtlo.jpg"
+                alt="Game Pad" width="350px" height="300px">
+        </div>
+        <div id="features">
+            <p>This product is for mobile gamers. This is basically a controller for phones. It connects to the phone
+                using bluetooth.
+                and has flawless reaction time. This product is a dream come true for mobile gamers.
+            </p>
+        </div>
+        <div id="specs">
+            <div class="specs-item">
+                <img src="https://res.cloudinary.com/dbrsienbw/image/upload/v1596039097/Lightning_lojeyn.jpg"
+                    alt="Charge" width="200px" height="200px" class="round">
+                <p><strong>Charge</strong> while <strong>playing</strong></p>
+            </div>
+            <div class="specs-item">
+                <img src="https://res.cloudinary.com/dbrsienbw/image/upload/v1596039177/Cool_jpvdyv.jpg" alt="Cool"
+                    class="round" width="200px" height="200px">
+                <p>Keep phone <strong>cool</strong> </p>
+            </div>
+            <div class="specs-item">
+                <img src="https://res.cloudinary.com/dbrsienbw/image/upload/v1596039097/Ease_kfj0zi.png" alt="Ease"
+                    width="200px" height="200px" class="round">
+                <div class="info">
+                </div>
+                <p class="ease">Game in <strong>Ease</strong></p>
+            </div>
+        </div>
+        <div id="shop-now">
+            <h1>So what are you waiting for? <br>
+                Get Your Own Game Pad now. <br>
+            </h1>
+            <h3>It's price is only ₹999. Get it now.</h3>
+            <div class="buyButton" id="shop">Buy Now</div>
+        </div>
+        <script src="./app.js"></script>
     </div>
-    <div id="home-image" class="flex-centered">
-      <img src="https://res.cloudinary.com/dbrsienbw/image/upload/v1593924381/download_c1ihlk.jpg" alt="photo" />
-    </div>
-  </section>
-  <section id="work" class="flex-centered">
-    <h1>My Work</h1>
-    <p>
-      “I love coding & ever since I took up ProGrad Junior, I’ve built some
-      cool projects. I’ve also picked up HTML, CSS & JavaScript”
-    </p>
-    <div class="projects">
-      <div class="project">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/project1.png" alt="project1" />
-        <h3>Recipe Web Page</h3>
-        <p>I built a Dalgona Coffee Recipe page using HTML & CSS.</p>
-        <div class="styled-link"><a href="">SEE PROJECT</a></div>
-      </div>
-      <div class="project">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/project2.png" alt="project1" />
-        <h3>Stay Safe from COVID</h3>
-        <p>I created a webpage on safety measures to prevent COVID.</p>
-        <div class="styled-link"><a href="https://veer-banerjee.github.io/StaySafe/">SEE PROJECT</a></div>
-      </div>
-      <div class="project">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/project3.png" alt="project1" />
-        <h3>Guess The Number Game</h3>
-        <p>I built guess the number game using JavaScript.</p>
-        <div class="styled-link"><a href="https://veer-banerjee.github.io/GuessingGame/">SEE PROJECT</a></div>
-      </div>
-      <div class="project">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/project4.png" alt="project1" />
-        <h3>My Cartoon Page</h3>
-        <p>For the love of cartoons, I built a webpage.</p>
-        <div class="styled-link"><a href="https://veer-banerjee.github.io/Cartoon-Page/">SEE PROJECT</a></div>
-      </div>
-      <div class="project">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/project5.png" alt="project1" />
-        <h3>Game</h3>
-        <p>I built a game using HTML, CSS & JS.</p>
-        <div class="styled-link"><a href="https://veer-banerjee.github.io/BubbleBlast/">SEE PROJECT</a></div>
-      </div>
-      <div class="project">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/project6.png" alt="project1" />
-        <h3>My First Product Idea</h3>
-        <p>I’ve created a website for my first product idea.</p>
-        <div class="styled-link"><a href="">SEE PROJECT</a></div>
-      </div>
-    </div>
-  </section>
-  <section id="achievements">
-    <h1 class="flex-centered">My Achievements</h1>
-    <ul class="flex-centered">
-      <li>Won 2nd price in Creative writing and painting competitions</li>
-      <li>
-        My Science project got selected as the "Best Project" in the year 2018
-      </li>
-      <li>
-        I love sports and I am a member of Basket ball and Football teams at
-        my school. Our team also won a interschool football tournament
-      </li>
-      <li>
-        I'm a very enthusiast learners. I took part in several interschool
-        competitions
-      </li>
-    </ul>
-  </section>
-  <section id="hobbies" class="flex-centered">
-    <h1>My Hobbies</h1>
-    <p>
-      When I’m free, you’ll find me doing one of these. Honestly, I hate to
-      laze around!
-    </p>
-    <div class="image-grid">
-      <div class="column">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/hobby1.png" alt="hobby1" />
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/hobby2.png" alt="hobby2" />
-      </div>
-      <div class="column">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/hobby3.png" alt="hobby3" />
-      </div>
-      <div class="column">
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/hobby4.png" alt="hobby4" />
-        <img src="https://i1.faceprep.in/prograd-junior/portfolio/hobby5.png" alt="hobby5" />
-      </div>
-    </div>
-  </section>
-  <section id="contact" class="flex-centered">
-    <h1>Contact</h1>
-    <p>
-      rachel.green@gmail.com
-    </p>
-    <p>
-      All rights reserved. Made by ProGrad Junior.
-    </p>
-  </section>
-  <script src="app.js"></script>
 </body>
 
 </html>
